# ballsdex-packs

./: LICENSE.md  README.md  models.py  pyproject.toml
.github /workflows/: release.yml
.github/workflows/: release.yml
migrations/: 0001_initial.py
package/: cog.py
packs/: admin.py  apps.py  models.py
packs/migrations/: 0001_initial.py  0002_pack_last_claim_date.py  0002_packinstance_remove_pack_discord_id_and_more.py  0003_rename_kind_pack_type.py  0004_pack_is_opened.py  0005_pack_max_rarity_pack_min_rarity.py  0005_rename_app_packs_to_ballsdex_packs.py  0006_packinstance_remove_pack_discord_id_and_more  0006_packinstance_remove_pack_discord_id_and_more.py  0007_alter_pack_type.py  0008_pack_name.py  0009_alter_pack_max_rarity_alter_pack_min_rarity.py  0010_remove_packinstance_max_rarity_and_more.py  0011_populate_packinstance_pack.py  0012_alter_packinstance_pack.py
packs/package/: __init__.py  admin.py  cog.py
