[project]
name = "ballsdex-packs"
version = "1.4.3"

description = "Packs package for Ballsdex 3.0"
license = "MIT"
authors = [
    { name = "Seif", email = "seiftheman1@gmail.com" },
]

[project.urls]
Repository = "https://github.com/seiftheman/ballsdex-packs"
Documentation = "https://github.com/seiftheman/ballsdex-packs#readme"
Issues = "https://github.com/seiftheman/ballsdex-packs/issues"
